# directory-name-searcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
ci/: README.md  forbidden.txt
src/directory_name_searcher/: cli.py  loader.py  search.py
tests/: test_cli.py  test_loader.py  test_search.py
